--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ maintainers = [
 ]
 description = "A lightweight and easy way to improve your terminal apps."
 readme = {file = "README.md", content-type = "text/markdown"}
-license = {text = "Apache-2.0"}
+license = {text = "GPL-3.0-or-later"} # license = {text = "Apache-2.0"}
 keywords = ["terminal", "cmd", "command line", "lightweight", "glimmer"]
 classifiers = [
 	"Development Status :: 3 - Alpha",
